force-app/main/default/objects/aecm__Metric__c/aecm__Metric__c.object-meta.xml
<CustomObject>
    <description>Abstract object for capturing metrics.</description>
    <label>Metric</label>
    <nameField>
        <label>Metric</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>