force-app/main/default/objects/aecm__Metric__c/fields/aecm__Capability__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associates the metric with a capability.</description>
    <label>Capability</label>
    <referenceTo>aecm__Capability__c</referenceTo>
    <relationshipName>Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>