force-app/main/default/objects/aecm__Metric__c/fields/aecm__Class__c.field-meta.xml
<CustomField>
    <fullName>aecm__Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Success</fullName>
            </value>
            <value>
                <fullName>Operational Success</fullName>
            </value>
            <value>
                <fullName>User Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>