force-app/main/default/objects/aecm__Metric__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <inlineHelpText>Enter a description for this metric up to 1000 characters.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>