force-app/main/default/objects/aecm__Metric__c/fields/aecm__Dollar_Value__c.field-meta.xml
<CustomField>
    <fullName>aecm__Dollar_Value__c</fullName>
    <inlineHelpText>a currency value for this metric. Use Quantified Value for non currency values.</inlineHelpText>
    <label>Dollar Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>