force-app/main/default/objects/aecm__Metric__c/fields/aecm__Is_Rollup_Parent__c.field-meta.xml
<CustomField>
    <fullName>aecm__Is_Rollup_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to indicate this metric&apos;s value fields will be populated from other child metric records.</inlineHelpText>
    <label>Is Rollup Parent</label>
    <type>Checkbox</type>
</CustomField>