force-app/main/default/objects/aecm__Metric__c/fields/aecm__Quantified_Value__c.field-meta.xml
<CustomField>
    <fullName>aecm__Quantified_Value__c</fullName>
    <inlineHelpText>A non currency value such as an index, factor, count, etc.</inlineHelpText>
    <label>Quantified Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>