force-app/main/default/objects/aecm__Metric__c/fields/aecm__Rollup_To__c.field-meta.xml
<CustomField>
    <fullName>aecm__Rollup_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent metric to roll up value of this metric to.</inlineHelpText>
    <label>Rollup To</label>
    <referenceTo>aecm__Metric__c</referenceTo>
    <relationshipName>Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>