force-app/main/default/objects/aecm__Metric__c/fields/aecm__Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost of Ownership</fullName>
            </value>
            <value>
                <fullName>Cost of Maintaining Value</fullName>
            </value>
            <value>
                <fullName>Realized Business Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>