force-app/main/default/objects/aecm__Metric__c/fields/aecm__Value_Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Value_Type__c</fullName>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>