force-app/main/default/objects/aecm__Metric__c/validationRules/aecm__One_Value_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>aecm__One_Value_Field</fullName>
    <active>true</active>
    <errorConditionFormula>((Not(ISNULL(aecm__Quantified_Value__c))  &amp;&amp; ISPICKVAL(aecm__Value_Type__c, &apos;Currency&apos;))  &amp;&amp;  Not(ISNULL(aecm__Dollar_Value__c)))</errorConditionFormula>
    <errorMessage>The Value Type is set to Number and you have entered a Dollar Value. Only one value and type is allowed.</errorMessage>
</ValidationRule>