force-app/main/default/objects/aecm__Metric__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Rollup_To__c</columns>
    <columns>aecm__Is_Rollup_Parent__c</columns>
    <columns>aecm__Type__c</columns>
    <columns>aecm__Value_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>