force-app/main/default/objects/aecm__Metric__c/listViews/aecm__Metric_Hierarchy.listView-meta.xml
<ListView>
    <fullName>aecm__Metric_Hierarchy</fullName>
    <columns>NAME</columns>
    <columns>aecm__Is_Rollup_Parent__c</columns>
    <columns>aecm__Rollup_To__c</columns>
    <columns>aecm__Type__c</columns>
    <columns>aecm__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Metric Hierarchy</label>
</ListView>