force-app/main/default/objects/aecm__Metric__c/listViews/aecm__Metric_List.listView-meta.xml
<ListView>
    <fullName>aecm__Metric_List</fullName>
    <columns>aecm__Is_Rollup_Parent__c</columns>
    <columns>aecm__Class__c</columns>
    <columns>aecm__Type__c</columns>
    <columns>NAME</columns>
    <columns>aecm__Rollup_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>Metric List</label>
</ListView>