force-app/main/default/objects/aecm__Metric__c/listViews/aecm__Metric_Values.listView-meta.xml
<ListView>
    <fullName>aecm__Metric_Values</fullName>
    <columns>aecm__Class__c</columns>
    <columns>aecm__Type__c</columns>
    <columns>NAME</columns>
    <columns>aecm__Dollar_Value__c</columns>
    <columns>aecm__Quantified_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>Metric Values</label>
</ListView>